feat: add find laboratories by exam name into /laboratories
